java8 로 변환 완료